[package]
name = "rustychain"
version = "0.1.0"
authors = ["edorka <edorka@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
base64 = "0.13.0"
hex = "0.4.3"
serde_json = "1.0"
tide = "0.15.0"
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
http-types = "2.11.1"
